<resources>
    <string name="skip"> Skip </string>
    <string name="app_name">MindSeeker</string>
    <string name="welcome">Welcome</string>
    <string name="names">by Junha Choi and Jinyoung Hong</string>
    <string name="Game_Name">Mine Seeker</string>
    <string name="play">play</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="board_size">Board Size</string>
    <string name="mine_number">Mine Number</string>
    <string name="settings">Settings</string>
    <string name="reset_play_history">Reset Play History</string>
    <string name="back">Back</string>
    <string name="description">This is a game to find Ryan the lion in the bushes!&#xA; Click on the Buttons to
                                see how many Ryans are left!!&#xA; The number in the boxes represent the number of Ryans &#xA;
                                in the same row and column of that box.&#xA;
                                Good Luck!</string>
    <string name="numminesfound">#minesfound</string>
    <string name="num_scans_used">#scans used</string>
    <string name="total_play">Total Play:</string>
    <string name="best_score">Best Score:</string>
    <string name="madeby">Made By : Junha Choi and Jinyoung Hong</string>
    <string name="copyright">Copyright Kakao Corp.</string>
</resources>
