<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/downloadfile33"
    tools:context="com.example.choijun_ha.mindseeker.PlayActivity">

    <TableLayout
        android:id="@+id/TableForButtons"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="220dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:id="@+id/num_found_mines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:text="@string/numminesfound" />

    <TextView
        android:id="@+id/num_scans_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="40dp"
        android:text="@string/num_scans_used" />

    <TextView
        android:id="@+id/total_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/num_scans_used"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:text="@string/total_play" />

    <TextView
        android:id="@+id/bestScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/total_play"
        android:layout_alignEnd="@+id/num_found_mines"
        android:layout_marginEnd="11dp"
        android:text="@string/best_score"/>
</android.widget.RelativeLayout>
